--- a/apps/backend/deployment.yaml
+++ b/apps/backend/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: backend
-        image: nginx:1.23
+        image: httpd:latest
         ports:
         - containerPort: 80
